added code to HMTL file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,42 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>The ul, ol, and li elements represent unordered lists, ordered lists, and list items. In essence, these HTML elements represent bulleted or numbered lists.</li>
+          <li>Elements that are nested inside other elements are called child elements. If there are three elements nested inside of a body element, those three nested elements are known as child elements. The element that holds all the children—in this case, the body element—is known as the parent element.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>Branch: A workspace, within a repository, where you can make changes that do not affect the live site</li>
+          <li>Commit Changes: A commit happens when you are adding, editing, or deleting a file within your repository. Adds changes to your branch</li>
+          <li>Issue: A way to report new tasks or content fixes. All new issues are tracked on the project board, once created. Best practice to move issue to Done (and thereby close the issue) once it is done</li>
+          <li>Merge: When a pull request (“PR”) is approved, changes are pulled in or merged into the main branch. Changes, ultimately, move on in the process to being published/deployed to the live site, once merge happens</li>
+          <li>Pull Request (“PR”): Asking for changes on your branch to be pulled in/merged into another branch. A way of discussing and reviewing your work with others</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
