added to CSS project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -25,7 +26,8 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
         </ul>
       </section>
    
@@ -34,11 +36,11 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li>Branch: A workspace, within a repository, where you can make changes that do not affect the live site</li>
-          <li>Commit Changes: A commit happens when you are adding, editing, or deleting a file within your repository. Adds changes to your branch</li>
-          <li>Issue: A way to report new tasks or content fixes. All new issues are tracked on the project board, once created. Best practice to move issue to Done (and thereby close the issue) once it is done</li>
-          <li>Merge: When a pull request (“PR”) is approved, changes are pulled in or merged into the main branch. Changes, ultimately, move on in the process to being published/deployed to the live site, once merge happens</li>
-          <li>Pull Request (“PR”): Asking for changes on your branch to be pulled in/merged into another branch. A way of discussing and reviewing your work with others</li>
+          <li>Branch: A workspace, within a repository, where you can make changes that do not affect the live site.</li>
+          <li>Commit Changes: A commit happens when you are adding, editing, or deleting a file within your repository. Adds changes to your branch.</li>
+          <li>Issue: A way to report new tasks or content fixes. All new issues are tracked on the project board, once created. Best practice to move issue to Done (and thereby close the issue) once it is done.</li>
+          <li>Merge: When a pull request (“PR”) is approved, changes are pulled in or merged into the main branch. Changes, ultimately, move on in the process to being published/deployed to the live site, once merge happens.</li>
+          <li>Pull Request (“PR”): Asking for changes on your branch to be pulled in/merged into another branch. A way of discussing and reviewing your work with others.</li>
         </ul>
       </section>
    
