--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <ul>
           <li>A margin indicates how much space we want around the outside of an element.</li>
           <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>In CSS we have several types of boxes that generally fit into the categories of block boxes and inline boxes. The type refers to how the box behaves in terms of page flow and in relation to other boxes on the page. Boxes have an inner display type and an outer display type.</li>
+          <li>Declarations contain two important components: the CSS property we want to apply and the value of the property.</li>
         </ul>
       </section>
    
@@ -48,7 +50,11 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Comments are snippets of text that can be added along with code. The browser ignores text marked as comments. You can write comments in JavaScript just as you can in CSS:</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>An array is a single variable that is used to hold a group of data. Arrays are typically used to hold data that is related in some way.</li>
+          <li>The strict equality operator "===" checks to see if two values are equal, and returns a Boolean result of "true" if the values are equal and "false" if the values are not equal.</li>
         </ul>
       </section>
     </main>
